rewrite codebase
